tests/solidity-semantic-tests/results_new2.txt
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction O7U544DTGDVT2NFCXI5VIFVVFWJIJMIGFZSHIY2CY3CL36UPRYIA: logic eval error: attempt to self-call. Details: app=1009, pc=600, opcodes=pushbytes 0x546573744e616d65 // "TestName"; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction G3TQGOABHUQYTDVDETAZV6ZQXAFWIXV4CYGZUDZG47RPEMZI6HUA: logic eval error: assert failed pc=393. Details: app=1013, pc=393, opcodes=return; label12:; intc_1 // 0; assert
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction PCIPAVHYHHRMZV7QQNUZOLKXUUOEWEYOLWURUQJ45KPZHESOPP4Q: logic eval error: assert failed pc=90. Details: app=1019, pc=90, opcodes=return; label3:; intc_1 // 0; assert
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction A6OP2QBADOJQLRCD7SHUVHLO6FHNKYTO4V7QCBXGV62GAHQHFKWQ: logic eval error: app 7793644116795425341 does not exist. Details: app=1023, pc=269, opcodes=pushbytes 0x002807a5a31b000000000000000000000000000000000000000000000000000000000000123461621234 // 0x002807a5a31b000000000000000000000000000000000000000000000000000000000000123461621234; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction NLXI47BN5ITUSILZCSXHQFAADBO2JCVGPECBYV275S3ICN4U5DLQ: logic eval error: app 7793644116795425341 does not exist. Details: app=1023, pc=384, opcodes=pushbytes 0x0044d27922c600000000000000000000000000000000000000000000000000000000000012340000000000000000000000000000000000000000000000000000000000001234 // 0x0044d27922c600000000000000000000000000000000000000000000000000000000000012340000000000000000000000000000000000000000000000000000000000001234; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 4IOB4FOBFZNFZO6DU2D3QSUG3CEJP5Z64V2VLZLVWECZGSSAMLTQ: logic eval error: roundCowBase.getCreator() cidx: 14865398991003647707 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1071, pc=984, opcodes=dup; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction YZ4TH6QB7RFIOMPJIPYIK3LMWLE46HX5WKQUK2YQQWZAZSQ3JNPA: logic eval error: roundCowBase.getCreator() cidx: 14865398991003647707 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1071, pc=1209, opcodes=dup; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction FGHXWM6GF2QPWCWRLNGSNUPXG3QPAXMGUVR4AUMHTEAWIKD2LCMQ: logic eval error: extraction end 32 is beyond length: 0. Details: app=1085, pc=105, opcodes=swap; substring3; extract 0 32
